--- a/cocart_fibs.tex
+++ b/cocart_fibs.tex
@@ -177,6 +177,7 @@ We provide here a partial proof of the following result because we will need to 
 \end{theorem}
 
 \begin{corollary}
+  \label{cor:reedy_implies_inner}
   If $f\colon X \to Y$ is a Reedy fibration between Segal spaces, then $f / \Delta^{0}\colon X / \Delta^{0} \to Y / \Delta^{0}$ is an inner fibration between quasicategories.
 \end{corollary}
 
