--- a/sources.bib
+++ b/sources.bib
@@ -118,5 +118,12 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Book{roushtransfer,
+  author    = {Roush, F. W.},
+  date      = {1972},
+  title     = {Transfer in Generalized Cohomology Theories},
+  publisher = {Princeton University},
+  subtitle  = {(Ph.D. thesis)},
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
